@@ -277,27 +277,6 @@ contains
 
     case(1) ! Do full temperature solution ---------------------------------------------
 
-!lipscomb - restart mod - These routines are now called at the end of tstep_p3, so that wgrd
-!                         can be written to the hotstart file and used for restart.
-
-       ! Calculate time-derivatives of thickness and upper surface elevation ------------
-
-       call timeders(model%thckwk,   &
-            model%geometry%thck,     &
-            model%geomderv%dthckdtm, &
-            model%geometry%mask,     &
-            model%numerics%time,     &
-            1)
-
-       call timeders(model%thckwk,   &
-            model%geometry%usrf,     &
-            model%geomderv%dusrfdtm, &
-            model%geometry%mask,     &
-            model%numerics%time,     &
-            2)
-
-       ! Calculate the vertical velocity of the grid ------------------------------------
-    
        ! Calculate the actual vertical velocity; method depends on whichwvel ------------
 
        ! *sfp* Added the if clause here so that this calc only gets done if has NOT
